# testing

./: .env.example  .gitignore  CREWAI_INTEGRATION.md  CREWAI_PLATFORM_DEPLOY.md  CREWAI_READY.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_SUCCESS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  SETUP_CREWAI.md  SETUP_OLLAMA.md  crew.py  crewai.yaml  main.py  pyproject.toml  requirements.txt  test_crew.py
agents/: __init__.py  analytics_agent.py  city_ops_agent.py  coordinator_agent.py  intercity_carrier_agent.py  routing_agent.py  tracking_support_agent.py
config/: crew_config.yaml
src/morocco_delivery_mas/: __init__.py  crew.py  main.py
src/morocco_delivery_mas/config/: agents.yaml  tasks.yaml
src/morocco_delivery_mas/tools/: courier_tools.py  ctm_tools.py  routing_tools.py  tracking_tools.py
tasks/: __init__.py  intercity_transfer_task.py  optimize_routes_task.py  plan_delivery_task.py
tools/: __init__.py  courier_tools.py  ctm_tools.py  db_tools.py
