[project]
name = "morocco-delivery-mas"
version = "0.1.0"
description = "AI-powered multi-agent delivery system for Morocco"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.28.0",
    "litellm>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morocco_delivery_mas"]

[project.scripts]
run_crew = "morocco_delivery_mas.main:run"
train = "morocco_delivery_mas.main:train"
replay = "morocco_delivery_mas.main:replay"
test = "morocco_delivery_mas.main:test"

[tool.crewai]
crew_module = "morocco_delivery_mas.crew"
crew_class = "MoroccoDeliveryMasCrew"
